@@ -1,0 +1,2 @@
+/dynamic_config
+/main.o
