@@ -2,6 +2,12 @@
 # some news ... see also TODO for hints
 #
 
+
+2017-09-24 -> add game_obj_func_t which holds all functions
+	   -> make flying_astronaut_2 use it
+	   -> add first stuff to the object fab
+	   -> add skeleton dynamic_config based on flying_astronaut_2
+
 2017-09-22 -> fix collision_object function
 
 2017-09-20 -> use new game_obj_t and game_obj_data_t in all examples
